angular14 regalia gold  benefit page design collapse correction

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5797,14 +5797,14 @@ marquee {
                 font-weight: 300;
                 font-size: 16px;
                 color: #FFFFFF;
-                opacity: 0.5;
+                // opacity: 0.5;
                 border-bottom:none;
                 padding:5px 10px 5px 10px;
                 border-radius:3px;
                 width:100%;
             }
             .rg_hdr_search_tool{
-                right:30px;
+                right:30px !important;
             }
             .header-concierge-btn {
                 .header_drpdwn_btn{
@@ -6034,6 +6034,7 @@ marquee {
         background: radial-gradient(162.89% 100.17% at 3.6% 1.49%, #2C0E00 44.79%, #CF8D56 100%);
         box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.5);
         padding:20px 20px;
+        width:20vw;
         li{
             padding:0px;
             margin:0px;
@@ -6059,7 +6060,8 @@ marquee {
     }
 }
 .privilage_list_arw {
-	width: 50% !important;
+	width: 12px !important;
+    height: 12px !important;
 }
 .rg_offers_title{
     font-weight: 600;
