--- a/src/app/shared-components/benefits/benefits.component.scss
+++ b/src/app/shared-components/benefits/benefits.component.scss
@@ -111,6 +111,9 @@
             color: #000000;
         }
     }
+    .p_rel{
+        position:relative;
+    }
 .welcome_bnfts_collapse{
     background: #FFFFFF;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1);
@@ -123,17 +126,15 @@
         line-height: 22px;
         color: #CF8D56;
         width:100%;
-        // &:after {
-        //     content: "\002B";
-        // }
-    }
-    .round_div{
-        padding:5px;
-        border-radius:50%;
-        width:20px;
-        height:20px;
-        float:right;
-        background: #CF8D56;
+        .round_div{
+            padding:5px;
+            border-radius:50%;
+            width:20px;
+            height:20px;
+            float:right;
+            background: #CF8D56;
+        }  
+       
     }
     .welcome_bnfts_collapse_cntnt{
         margin-top:2rem;
@@ -156,7 +157,32 @@
         }
         
     }
+    &::after {
+        content: "\002B";
+        color: #fff;
+        float:right;
+        position:absolute;
+        top:10px;
+        right:24px;
+        font-family: 'FontAwesome';
+        font-weight:900;
+        font-size:20px;
+    }  
 } 
+.welcome_bnfts_collapse[aria-expanded="true"] {
+    &::after {
+        content: "\002D";
+        color: #fff;
+        float:right;
+        position:absolute;
+        top:8px;
+        right:25px;
+        font-family: 'FontAwesome';
+        font-weight:900;
+        font-size:30px;
+    }
+}
+
 .milestone_benfits{
     background:#FCF9F6;
     margin:0px;
@@ -197,15 +223,43 @@
     justify-content:center;
 }
 
-.panel-title::after {
-    content: "\f107";
-    color: #333;
-    top: -2px;
-    right: 15px;
-    position: absolute;
-    font-family: "FontAwesome"
+
+.panel-title {
+	&::after {
+		content: "\f107";
+		color: #CF8D56;
+		top: -2px;
+		right: 55px;
+		position: absolute;
+		font-family: 'FontAwesome';
+	}
+}
+.panel-title[aria-expanded="true"] {
+	&::after {
+		content: "\f106";
+	}
 }
 
-.panel-title[aria-expanded="true"]::after {
-    content: "\f106";
+
+$color_1: #000;
+.hide {
+	display: none;
+}
+.internal {
+	text-decoration: none;
+	color: $color_1;
+	&:after {
+		content: "\002B";
+		padding-left: 5px;
+	}
+}
+.internal.expanded {
+	&:after {
+		content: "\002D";
+	}
+}
+#name {
+	&:not(.hide) {
+		display: block;
+	}
 }
